[path] Initialise spline from current point

Joonas spotted that the breakage with the curve bounds was the result of
initialising the spline using the original move to point and not the
current point.

Fixes: Bug 19256 Gnome Foot in gnome-games rendered incorrectly
(https://bugs.freedesktop.org/show_bug.cgi?id=19256)